--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,12 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.css"
-            ],
+              "styles": [
+                "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+                "node_modules/primeng/resources/primeng.min.css",
+                "./node_modules/primeflex/primeflex.css",
+                "src/styles.css"
+              ],
             "scripts": []
           },
           "configurations": {
